src/objects/Return_VO_Header__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
    	<fullName>Vendor_Name__c</fullName>
	    <formula>Vendor__r.Name</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Vendor Name</label>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>AccountingResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <description>Not in use</description>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Memo__c</fullName>
        <label>Credit Memo#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits_Pending__c</fullName>
        <description>Total pre-tax cost of all of the line items that have not been credited.</description>
        <inlineHelpText>Total pre-tax cost of all of the line items that have not been credited.</inlineHelpText>
        <label>Credits Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>        
    </fields>
    <fields>
        <fullName>FX_Conversion_Rate__c</fullName>
	    <label>FX Conversion Rate</label>
	    <precision>18</precision>
	    <scale>6</scale>
	    <type>Number</type>
    </fields>
    <fields>
        <fullName>Backward_Conversion_Rate__c</fullName>
        <description>Backward Conversion Rate With Markup</description>
        <formula>if((ISNULL(FX_Conversion_Rate__c) || FX_Conversion_Rate__c = 0),1,1/FX_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Backward Conversion Rate With Markup</inlineHelpText>
        <label>Backward Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_Date__c</fullName>
        <label>Credited Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credits_Pending_Reporting__c</fullName>
        <formula>Credits_Pending__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credits Pending (Reporting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_VO_Headers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Total__c</fullName>
        <formula>SubTotal__c +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Field to indicate why they are returning the parts.</description>
        <inlineHelpText>Field to indicate why they are returning the parts.</inlineHelpText>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Credited</fullName>
                </value>
                <value>
                    <fullName>Partially Credited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubTotal_Reporting__c</fullName>
        <formula>SubTotal__c  * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubTotal (Reporting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_VO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
	    <fullName>Xero_Variance_JE_Accounting_Id__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
	    <label>Xero Variance JE Accounting Id</label>
	    <length>255</length>
	    <type>Text</type>
    </fields>
    <fields>
	    <fullName>QB_Variance_JE_Accounting_Id__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
	    <label>QB Variance JE Accounting Id</label>
	    <length>255</length>
	    <type>Text</type>
    </fields>
    <fields>
    	<fullName>Available_For_QB_Variance_JE_Sync__c</fullName>
        <description>Not in use</description>
	    <defaultValue>false</defaultValue>
        <inlineHelpText>Not in use</inlineHelpText>
	    <label>Available For QB Variance JE Sync</label>
	    <type>Checkbox</type>
    </fields>
    <fields>
	    <fullName>Accounting_Response_Variance_JE__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
	    <label>Accounting Response Variance JE</label>
	    <length>32768</length>
	    <type>LongTextArea</type>
    </fields>
    <fields>
	    <fullName>Accounting_Last_Sync_Time_Variance_JE__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
	    <label>Accounting Last Sync Time Variance JE</label>
	    <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_VO_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>This is the date when the status of the return was set to “Approved”.</description>
        <inlineHelpText>This is the date when the status of the return was set to “Approved”.</inlineHelpText>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
	    <fullName>Available_For_Xero_Variance_JE_Sync__c</fullName>
        <description>Not in use</description>
	    <defaultValue>false</defaultValue>
        <inlineHelpText>Not in use</inlineHelpText>
	    <label>Available For Xero Variance JE Sync</label>
	    <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
	    <fullName>Sync_Token_For_Variance_JE__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
	    <label>Sync Token For Variance JE</label>
	    <length>255</length>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Reporting__c</fullName>
        <formula>Tax__c  * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax (Reporting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Indicates a tracking number.</description>
        <inlineHelpText>Indicates a tracking number.</inlineHelpText>
        <label>Tracking#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Return VO Headers</relationshipLabel>
        <relationshipName>Return_VO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <description>Not in use</description>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>Return VO Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Return_Vendor_Orders</fullName>
        <columns>NAME</columns>
        <columns>Credit_Memo__c</columns>
        <columns>RMA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Return Vendor Orders</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_Vendor_Return</fullName>
        <columns>NAME</columns>
        <columns>Total__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Vendor Return</label>
    </listViews>
    <nameField>
        <displayFormat>RTN-{00000000}</displayFormat>
        <label>Return VO Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return VO Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>